<resources>
    <string name="app_name">LENS Corporation</string>
    <string name="pdf_url">https://drive.google.com/file/d/1NrVfbVQ4psiaD6D8sbRmj7JKT23Y1JxY/view?usp=drive_link</string>
    <string name="contact_us">Contact Us</string>
    <string name="latest_headline">Latest\n Headlines</string>
    <string name="latest_headline_text">Lorem Ipsum The national single window system has access to over 100 central level approvals and state single window systems of 14 states with one user Id and password</string>
    <string name="irpof_heading">Indian Railway Promotee Officers Federation (IRPOF)</string>
    <string name="irpof_details">Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi. It Functions Through Its Member Associations. Zonal Associations Functions Through Divisional Bodies Across All The 69 Divisions Of Indian Railways. The Aim Of The Federation Is To Safeguard Interests Of Promotee Officers And Provide Better Career Opportunities And Working Conditions. It Works For Development And Promoting Overall Efficiency In The Working Of Railways In The Best Interest Of Common People, The Nation And The Railway Men IRPOF Has Launched This Site To Keep Its Member Informed About The, Latest Activities And Share Views On Topics Of Importance. All The Members Are Requested To Kindly Contribute To Make The Site Useful And Meaningful.</string>
    <string name="our_mission_heading">Our Mission</string>
    <string name="mission_details">Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi. It Functions Through Its Member Associations. Zonal Associations Functions Through Divisional Bodies Across All The 69 Divisions Of Indian Railways.</string>
    <string name="view_details"><u>View Details</u></string>
    <string name="image_details">Following Are The Images From The Recent Event Held On Friday, 19th January Regarding ECM/AGM.</string>
    <string name="video">Video</string>
    <string name="recent_details_heading">Indian Railways Promotee Officers Federation (IRPOF) Is An Organization Of Promotee Officers Having Its Head Quarter At New Delhi.</string>
    <string name="published">Published On: 10/02/2024</string>
    <string name="search">Search...</string>
    <string name="image">Image</string>
    <string name="our_vision">Our Vision</string>
    <string name="recent_events">Recent Events</string>
    <string name="constitution">Constitution</string>
    <string name="download_npdf">Download \nPDF</string>
    <string name="show_preview">Show Preview</string>
    <string name="constitution_irpof">Constitution irpof</string>
    <string name="type_pdf"><b>Type: </b>pdf</string>
    <string name="scanned_copy">Scanned: Copy</string>


</resources>