<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/ivPDF"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pdf_icon" />

            <TextView
                android:id="@+id/tvIrpof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/constitution_irpof"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@+id/ivPDF"
                app:layout_constraintTop_toTopOf="@+id/ivPDF" />

            <TextView
                android:id="@+id/tvShowPDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/show_preview"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="@id/tvIrpof"
                app:layout_constraintTop_toBottomOf="@+id/tvIrpof" />

            <ImageView
                android:id="@+id/ivDownload"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPDF"
                app:srcCompat="@drawable/downward_icon" />

            <TextView
                android:id="@+id/tvViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/download_npdf"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/ivDownload"
                app:layout_constraintTop_toTopOf="@id/ivDownload" />

            <TextView
                android:id="@+id/tvPdfType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/type_pdf"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@+id/tvScanned"
                app:layout_constraintStart_toEndOf="@+id/tvViewDetails"
                app:layout_constraintTop_toTopOf="@id/ivDownload" />

            <TextView
                android:id="@+id/tvScanned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/scanned_copy"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivDownload" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>