<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_16sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_mission_heading"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_24sdp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/mission_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <TextView
        android:id="@+id/tvVision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_vision"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_24sdp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetails"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvVisionDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/mission_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVision" />

</androidx.constraintlayout.widget.ConstraintLayout>