<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/ivTrain"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_8sdp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearchCity"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/search_shape"
            android:hint="Search"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btnContact"
            app:layout_constraintEnd_toStartOf="@+id/btnContact"
            app:layout_constraintTop_toTopOf="@+id/btnContact" />

        <Button
            android:id="@+id/btnContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/contact_us"
            app:layout_constraintBottom_toBottomOf="@+id/ivTrain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivTrain" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivTrain"
            tools:itemCount="8"
            tools:listitem="@layout/item_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSlider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvItem"
            tools:itemCount="8"
            tools:listitem="@layout/slider_view" />

        <TextView
            android:id="@+id/tvLatest"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/contact_shape"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/latest_headline"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvSlider" />

        <TextView
            android:id="@+id/tvAutoRunning"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:background="@android:color/holo_blue_dark"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/latest_headline_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/tvLatest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLatest"
            app:layout_constraintTop_toBottomOf="@+id/rvSlider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>